// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionsCell /> render() should render correctly 1`] = `
<div>
  <div>
    <WithStyles(Button)
      color="gray"
      icon="ellipsis"
      iconButton={true}
      onClick={[Function]}
      size="small"
      tooltipProps={
        Object {
          "title": "Actions",
        }
      }
      variant="inline"
    />
  </div>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
    >
      <WithStyles(Icon)
        icon="pencil3"
      />
      <FormattedMessage
        defaultMessage="Edit"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.editLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="trash2"
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.deleteLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="compare"
      />
      <FormattedMessage
        defaultMessage="Move"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.moveLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="copy"
      />
      <FormattedMessage
        defaultMessage="Copy"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.copyLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Menu))>
</div>
`;

exports[`<ActionsCell /> render() should render correctly 2`] = `
<div>
  <div>
    <WithStyles(Button)
      color="gray"
      icon="ellipsis"
      iconButton={true}
      onClick={[Function]}
      size="small"
      tooltipProps={
        Object {
          "title": "Actions",
        }
      }
      variant="inline"
    />
  </div>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="trash2"
      />
      <FormattedMessage
        defaultMessage="Delete"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.deleteLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="compare"
      />
      <FormattedMessage
        defaultMessage="Move"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.moveLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      onClick={[Function]}
    >
      <WithStyles(Icon)
        icon="copy"
      />
      <FormattedMessage
        defaultMessage="Copy"
        id="app.containers.Templates.Components.ListView.components.ActionsCell.copyLabel"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Menu))>
</div>
`;
